--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="mobile-lang js-mobileLang">
+        <div class="mobile-lang mobile-lang--logout js-mobileLang">
           <div class="container">
             <div class="mobile-lang__inner">
               <h4 class="mobile-lang__title">Выбрать язык
@@ -81,15 +81,6 @@
                 <li class="mobile-lang__item js-mobileLangItem"><span>KZ</span>Kazakh</li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="lang js-lang">
-          <div class="lang__inner">
-            <ul class="lang__items">
-              <li class="lang__item js-langItem"><span>EN</span>English</li>
-              <li class="lang__item js-langItem active"><span>RU</span>Русский</li>
-              <li class="lang__item js-langItem"><span>KZ</span>Kazakh</li>
-            </ul>
           </div>
         </div>
         <div class="profile js-profile">
@@ -192,7 +183,7 @@
                   </div>
                 </div>
               </div>
-              <div class="advants__img"><img src="img/advants/main-img.png" alt="advants-img"></div>
+              <div class="advants__img"><img src="img/advants/main-img.svg" alt="advants-img"></div>
             </div>
           </div>
         </div>
