--- a/index-new.html
+++ b/index-new.html
@@ -29,20 +29,14 @@
     <div class="wrapper">
       <header class="header"> 
         <div class="header__inner"> <a class="header__logo" href="/"><img src="img/header/logo.svg" alt="Riwatex"></a>
-          <div class="header__links"><a class="header__link header__link--video" href="/">
-              <svg>
-                <use xlink:href="img/sprites/sprite.svg#play-video"></use>
-              </svg>Руководство</a><a class="header__link" href="/">Руководство пользователя</a><a class="header__link" href="/">FAQ</a></div>
-          <div class="header__profile js-openProfile">
-            <svg>
-              <use xlink:href="img/sprites/sprite.svg#profile"></use>
-            </svg>
-          </div>
+          <div class="header__links-logout"><a class="header__link" href="/">FAQ</a><a class="header__link" href="/">Свяжитесь с нами</a></div>
           <div class="header__lang js-openLang">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
             </svg>
           </div>
+                <button class="btn-simple header__btn-simple">Войти</button>
+                <button class="btn-green header__btn-green">Подать заявку</button>
           <div class="header__burger js-burgerBtn">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#burger"></use>
@@ -51,23 +45,13 @@
         </div>
         <div class="mobile-menu js-mobileMenu">
           <div class="container">
-            <div class="mobile-menu__inner"><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
-              <div class="mobile-menu__dropdown"><span class="js-dropdownMenu">Обзор
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#arrow-down-mobile-menu-dropdown"></use>
-                  </svg></span>
-                <ul>
-                  <li><a href="#">Мой профиль </a></li>
-                  <li><a href="#">Безопасность</a></li>
-                  <li><a href="#">Настройки 2FA</a></li>
-                  <li><a href="#">История входа</a></li>
-                </ul>
-              </div>
-              <button class="mobile-menu__btn">Выйти</button>
+            <div class="mobile-menu__inner">
+                    <button class="btn-simple mobile-menu__btn-simple">Войти</button>
+                    <button class="btn-green mobile-menu__btn-green">Подать заявку</button><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
             </div>
           </div>
         </div>
-        <div class="mobile-lang js-mobileLang">
+        <div class="mobile-lang mobile-lang--logout js-mobileLang">
           <div class="container">
             <div class="mobile-lang__inner">
               <h4 class="mobile-lang__title">Выбрать язык
@@ -81,15 +65,6 @@
                 <li class="mobile-lang__item js-mobileLangItem"><span>KZ</span>Kazakh</li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="lang js-lang">
-          <div class="lang__inner">
-            <ul class="lang__items">
-              <li class="lang__item js-langItem"><span>EN</span>English</li>
-              <li class="lang__item js-langItem active"><span>RU</span>Русский</li>
-              <li class="lang__item js-langItem"><span>KZ</span>Kazakh</li>
-            </ul>
           </div>
         </div>
         <div class="profile js-profile">
@@ -124,9 +99,144 @@
         </div>
       </header>
       <main class="main"> 
-        <!-- include ../../blocks/modules/banner/banner-->
-        <!-- include ../../blocks/modules/banner/banner-->
-        <!-- include ../../blocks/modules/banner/banner-->
+        <div class="intro">
+          <div class="container">
+            <div class="intro__bg-coins"><img src="img/intro/bg-coins.png" alt="bg-coins"></div>
+            <div class="intro__inner">
+              <div class="intro__content">
+                        <h1 class="title intro__title">Рекомендуйте трейдерам биржу <span>Riwatex</span> и увеличивайте свой доход
+                        </h1>
+                <p class="intro__text">Станьте партнером Riwatex и осознайте ценность своего влияния</p><a class="btn-index intro__btn" href="#">Стать партнером
+                          <svg>
+                            <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
+                          </svg></a>
+              </div>
+            </div>
+            <div class="intro__phones"><img class="intro__img" src="img/intro/phones.png" alt="phones"><img class="intro__bg" src="img/intro/bg-phones.png" alt="bg-phones"><img class="intro__bg--tablet-big" src="img/intro/bg-phones-tablet-big.png" alt="bg-phones"></div>
+          </div>
+        </div>
+        <div class="actions">
+          <div class="container">
+            <div class="actions__inner">
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-1.svg" alt="icon"></div>
+                <h4 class="actions__title">Подайте заявку</h4>
+                <p class="actions__text">Подайте заявку, чтобы стать партнером Riwatex и получать прибыль от сделок ваших рефералов.</p>
+              </div>
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-2.svg" alt="icon"></div>
+                <h4 class="actions__title">Дождитесь одобрения</h4>
+                <p class="actions__text">Riwatex рассмотрит вашу заявку. После одобрения вы получите уникальную реферальную ссылку, которой сможете поделиться со своей аудиторией.</p>
+              </div>
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-3.svg" alt="icon"></div>
+                <h4 class="actions__title">Начните продвижение</h4>
+                <p class="actions__text">Вы можете продвигать свою ссылку в статьях, в соцсетях или в любых других СМИ. За каждого одобренного активного пользователя вы будете получать пожизненную реферальную комиссию</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="advants">
+          <div class="container">
+            <div class="advants__inner">
+              <div class="advants__intro"><span class="advants__suptitle">Riwatex</span>
+                        <h1 class="title advants__title">Преимущества для партнеров
+                        </h1>
+                <p class="advants__text">Мы ищем ключевых лидеров мнений и создателей контента, которые могут воплотить нашу миссию и ценности в жизнь и продвигать нашу торговую платформу</p>
+              </div>
+              <div class="advants__items">
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-1.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Партнерство</h4>
+                    <p class="advants__text">Сотрудничайте с самой надежной в мире биржей криптовалют</p>
+                  </div>
+                </div>
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-2.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Прозрачность</h4>
+                    <p class="advants__text">Отслеживание и отчеты эффективности продвижения</p>
+                  </div>
+                </div>
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-3.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Вознаграждение</h4>
+                    <p class="advants__text">Вы можете получать оплату в выбранной вами криптовалюте</p>
+                  </div>
+                </div>
+              </div>
+              <div class="advants__img"><img src="img/advants/main-img.svg" alt="advants-img"></div>
+            </div>
+          </div>
+        </div>
+        <div class="statics">
+          <div class="container">
+            <div class="statics__inner">
+                      <h1 class="title statics__title">Наша комиссия более чем в два раза выше отраслевых стандартов
+                      </h1>
+              <div class="statics__items">
+                <div class="statics__item">
+                  <h3 class="statics__number">8,000<span>+</span></h3>
+                  <p class="statics__text">Наши партнеры</p>
+                </div>
+                <div class="statics__item">
+                  <h3 class="statics__number">170<span>+ стран</span></h3>
+                  <p class="statics__text">Глобальный охват</p>
+                </div>
+                <div class="statics__item">
+                  <h3 class="statics__number">6,200<span>+ USDT</span></h3>
+                  <p class="statics__text">Выплаченные комиссионные</p>
+                </div>
+              </div>
+              <div class="statics__img"><img src="img/statics/main-img.png" alt="statics-img"></div>
+            </div>
+          </div>
+        </div>
+        <div class="earn">
+          <div class="container">
+            <div class="earn__inner">
+              <div class="earn__intro">
+                        <h1 class="title earn__title">Ваш заработок
+                        </h1>
+                <p class="earn__text">Получайте пассивный доход каждый месяц за каждого привлеченного вами трейдера</p>
+              </div>
+              <div class="earn__blocks">
+                <div class="earn__block">
+                  <h3 class="earn__percent">50%</h3>
+                  <p class="earn__min-text">торговых комиссий ваших рефералов</p>
+                </div>
+                <div class="earn__plus"><img src="img/earn/plus.svg" alt="plus"></div>
+                <div class="earn__block earn__block--blue">
+                  <h3 class="earn__percent">10%</h3>
+                  <p class="earn__min-text">заработка ваших субпартнеров</p>
+                </div>
+              </div>
+              <div class="earn__imgs">
+                <div class="earn__main-img"><img src="img/earn/main-img.png" alt="earn-img"></div>
+                <div class="earn__scheme-img">
+                  <picture>
+                    <source srcset="img/earn/scheme-img-desktop.png" media="(min-width: 768px)"><img src="img/earn/scheme-img.png" alt="scheme-img">
+                  </picture>
+                </div>
+              </div>
+            </div>
+            <div class="earn__bg"><img src="img/earn/bg.png" alt="bg"></div>
+          </div>
+        </div>
+        <div class="partner">
+          <div class="container">
+            <div class="partner__inner">
+                      <h1 class="title partner__title">Станьте партнером <span>Riwatex</span>
+                      </h1>
+              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="btn-index partner__btn" href="#">Подайте заявку прямо сейчас
+                        <svg>
+                          <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
+                        </svg></a>
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <div class="container">
