--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div class="intro__content">
                         <h1 class="title intro__title">Рекомендуйте трейдерам биржу <span>Riwatex</span> и увеличивайте свой доход
                         </h1>
-                <p class="intro__text">Станьте партнером Riwatex и осознайте ценность своего влияния</p><a class="btn-index intro__btn" href="#">Стать партнером
+                <p class="intro__text">Станьте партнером Riwatex и осознайте ценность своего влияния</p><a class="intro__btn btn-index" href="#">Стать партнером
                           <svg>
                             <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
                           </svg></a>
@@ -250,7 +250,7 @@
             <div class="partner__inner">
                       <h1 class="title partner__title">Станьте партнером <span>Riwatex</span>
                       </h1>
-              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="btn-index partner__btn" href="#">Подайте заявку прямо сейчас
+              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="partner__btn btn-index" href="#">Подайте заявку прямо сейчас
                         <svg>
                           <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
                         </svg></a>
