страница регистрации и восстановления пароля

--- a/index-new.html
+++ b/index-new.html
@@ -34,7 +34,7 @@
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
             </svg>
-          </div><a class="link-btn header__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn header__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a>
+          </div><a class="link-btn header__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn header__link-btn-green link-btn--green" href="/apply.html" target="_self">Подать заявку</a>
           <div class="header__burger js-burgerBtn">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#burger"></use>
@@ -43,7 +43,7 @@
         </div>
         <div class="mobile-menu js-mobileMenu">
           <div class="container">
-            <div class="mobile-menu__inner"><a class="link-btn mobile-menu__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn mobile-menu__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
+            <div class="mobile-menu__inner"><a class="link-btn mobile-menu__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn mobile-menu__link-btn-green link-btn--green" href="/apply.html" target="_self">Подать заявку</a><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
             </div>
           </div>
         </div>
@@ -230,7 +230,7 @@
             <div class="partner__inner">
                       <h1 class="title partner__title">Станьте партнером <span>Riwatex</span>
                       </h1>
-              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="partner__btn btn-index" href="#">Подайте заявку прямо сейчас
+              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="partner__btn btn-index" href="/apply.html">Подайте заявку прямо сейчас
                         <svg>
                           <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
                         </svg></a>
