--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Riwatex Login</title>
+    <title>Riwatex Apply</title>
     <meta name="theme-color" content="#fff">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, viewport-fit=cover, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -34,7 +34,7 @@
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
             </svg>
-          </div><a class="link-btn header__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn header__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a>
+          </div><a class="link-btn header__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn header__link-btn-green link-btn--green" href="/apply.html" target="_self">Подать заявку</a>
           <div class="header__burger js-burgerBtn">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#burger"></use>
@@ -43,7 +43,7 @@
         </div>
         <div class="mobile-menu js-mobileMenu">
           <div class="container">
-            <div class="mobile-menu__inner"><a class="link-btn mobile-menu__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn mobile-menu__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
+            <div class="mobile-menu__inner"><a class="link-btn mobile-menu__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn mobile-menu__link-btn-green link-btn--green" href="/apply.html" target="_self">Подать заявку</a><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
             </div>
           </div>
         </div>
@@ -128,10 +128,10 @@
                                 </div>
                                 <div class="input__block">
                                   <div class="input__wrap"> 
-                                    <input class="input applicaton-start__input js-inputPass" type="password" id="apply-password" placeholder="Пароль">
+                                    <input class="input applicaton-start__input js-inputPass js-inputPassSecurity" type="password" id="apply-password" placeholder="Пароль">
                                     <button class="input__eye js-inputEye" type="button"></button>
                                     <ul class="input__password-reqs js-passReqs">
-                                      <li class="js-passSize">Длина пароля не менее 16 символов</li>
+                                      <li class="js-passSize">Длина пароля не менее 10 символов</li>
                                       <li class="js-passCapital">Минимум одна заглавная буква</li>
                                       <li class="js-passSymbol">Минимум один специальный символ (~!@#$%^&*()+`'";:<>/\|)</li>
                                     </ul>
@@ -185,65 +185,75 @@
                   <div class="application-about__checkboxes js-checkboxes">
                     <h4 class="application-about__label">Как вы планируете продвигать Riwatex? <span>(минимум 1 вариант)</span></h4>
                     <div class="application-about__checkboxes-wrapper">
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Twitter"><span>Twitter</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Telegram"><span>Telegram</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Line"><span>Line</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="KakaoTalk"><span>KakaoTalk</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="VK"><span>VK</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Поисковый маркетинг (SEM)"><span>Поисковый маркетинг (SEM)</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Блог"><span>Блог</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Партнерская сеть"><span>Партнерская сеть</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Форум"><span>Форум</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Другое"><span>Другое</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="YouTube"><span>YouTube</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Twitch"><span>Twitch</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Discord"><span>Discord</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Instagram"><span>Instagram</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="LinkedIn"><span>LinkedIn</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Facebook"><span>Facebook</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Одноклассники"><span>Одноклассники</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Rutube"><span>Rutube</span>
-                                    </label>
-                                    <label class="custom-checkbox js-checkboxCheck">
-                                      <input type="checkbox" value="Сайты с контентом"><span>Сайты с контентом</span>
-                                    </label>
+                      <div class="application-about__checkboxes-column">
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Twitter"><span>Twitter</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Telegram"><span>Telegram</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Line"><span>Line</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="KakaoTalk"><span>KakaoTalk</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="VK"><span>VK</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Поисковый маркетинг (SEM)"><span>Поисковый маркетинг (SEM)</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Блог"><span>Блог</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Партнерская сеть"><span>Партнерская сеть</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Форум"><span>Форум</span>
+                                      </label>
+                        <label class="custom-checkbox js-checkboxCheck">
+                          <input class="js-checkboxOther" type="checkbox" value="Другое"><span>Другое</span>
+                        </label>
+                        <div class="input__block application-about__other-input js-otherInputForCheckbox">
+                          <div class="input__wrap"> 
+                            <input class="input js-emptyCheck js-emptyCheckInputWithCheckbox" type="text" id="other" placeholder="Напишите свой вариант">
+                            <div class="input__error js-inputError">Обязательно для заполнения</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="application-about__checkboxes-column">
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="YouTube"><span>YouTube</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Twitch"><span>Twitch</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Discord"><span>Discord</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Instagram"><span>Instagram</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="LinkedIn"><span>LinkedIn</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Facebook"><span>Facebook</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Одноклассники"><span>Одноклассники</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Rutube"><span>Rutube</span>
+                                      </label>
+                                      <label class="custom-checkbox js-checkboxCheck">
+                                        <input type="checkbox" value="Сайты с контентом"><span>Сайты с контентом</span>
+                                      </label>
+                      </div>
                     </div>
-                    <div class="input__error js-inputError">Выберите хотя бы 1 вариант</div>
+                    <div class="input__error js-inputError js-inputErrorCheckboxes">Выберите хотя бы 1 вариант</div>
                   </div>
                   <div class="application-about__contact-data js-contactData">
                     <h4 class="application-about__label application-about__label--mb">Контактные данные <span>(введите хотя бы 1)</span></h4>
@@ -390,5 +400,6 @@
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/main.min.js"></script>
+    <script></script>
   </body>
 </html>
