--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="partner__inner">
                       <h1 class="title partner__title">Станьте партнером <span>Riwatex</span>
                       </h1>
-              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="partner__btn btn-index" href="#">Подайте заявку прямо сейчас
+              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p><a class="partner__btn btn-index" href="/apply.html">Подайте заявку прямо сейчас
                         <svg>
                           <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
                         </svg></a>
